--- a/client/src/sass/FormPage-style.scss
+++ b/client/src/sass/FormPage-style.scss
@@ -53,6 +53,10 @@
         margin-bottom: 3vh;
       }
 
+      .error {
+        color: $accent;
+      }
+
       .textBox {
         width: 30vw;
         height: 2vw;
