--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -1,6 +1,5 @@
 @import "../variables.scss";
 
-
 main {
   overflow-x: hidden;
   overflow-y: hidden;
@@ -9,7 +8,8 @@ main {
   display: flex;
   flex-direction: column;
 
-  max-height: 2000px;
+  max-height: 20000px;
+  background: $background;
 
   .LP {
     overflow-x: hidden;
