--- a/packages/client/src/sass/LandingPageNew-style.scss
+++ b/packages/client/src/sass/LandingPageNew-style.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
   background: $background;
-  height: 200vh;
+  height: 100vh;
   .navbar {
     width: 100%;
     padding-bottom: 20px;
@@ -35,24 +35,73 @@
     height: 100%;
 
     margin-top: 9.8vh;
+    .dotWrapper {
+      margin-right: 15vw;
+      position: relative;
+      p {
+        width: 8vw;
+        right: -9vw;
+        position: absolute;
+
+        text-align: start;
+        color: $main-text;
+      }
+    }
     .dot {
       width: 15px;
       height: 15px;
       border-radius: 100%;
-      background: #ff1d00;
-      margin: -0.2vh 0;
+      background: $gray;
+      margin: -1px 0;
+
+      z-index: 1;
     }
     .line {
+      margin-right: 15vw;
+
       width: 3px;
-      height: 2.2vw;
+      height: 4vw;
       border-radius: 8px;
-      background: #ff1d00;
+      background: $gray;
+
+      z-index: 0;
     }
     .accent {
       background: #ff1d00;
     }
-    .gray {
-      background: $gray;
+  }
+  .navigationButtons {
+    width: 70%;
+
+    right: 0;
+    button {
+      position: absolute;
+
+      outline: none;
+      border-radius: 5vh;
+      bottom: 20px;
+
+      font-weight: 700;
+    }
+    .nBtn {
+      color: $dark-gray;
+      background: $accent;
+
+      border: none;
+
+      right: 5vw;
+      padding: 0.8vh 2.5vw 0.8vh 2vw;
+    }
+    .gbBtn {
+      padding: 0.8vh 1.8vw;
+
+      color: $gray;
+      border: 2px solid $gray;
+
+      left: 30%;
+    }
+    .invisible {
+      display: none;
     }
   }
 }
