--- a/packages/client/src/sass/elements/SecondElement-style.scss
+++ b/packages/client/src/sass/elements/SecondElement-style.scss
@@ -5,7 +5,7 @@ main {
   position: absolute;
 
   width: 70vw;
-  height: 100%;
+
   article {
     width: 100%;
     .bottom {
@@ -17,6 +17,9 @@ main {
         margin-right: 4vw;
 
         position: relative;
+        background: $dark-gray;
+
+        border-radius: 1.4vh;
 
         .bigDescription {
           margin: 2vh 0 0 2vw;
@@ -24,7 +27,11 @@ main {
           color: $main-text;
           transition: 200ms;
         }
-
+        .description {
+          text-align: center;
+          color: $main-text;
+          margin: 2vh 1vw;
+        }
         .title {
           color: $accent;
           font-weight: 700;
