--- a/packages/client/src/variables.scss
+++ b/packages/client/src/variables.scss
@@ -17,6 +17,7 @@ $blue: #0082ff;
 $foreground-old: #0f0f0f;
 $background-old: #0a0a0a;
 
+$foreground: #0f0f0f;
 $background: #1b1b1b;
 
 $second-text: #e3e3e3;
