fix(client-landing): :lipstick: move button back and next always on the bottom of the screen
third element has longer page height

--- a/packages/client/src/sass/LandingPageNew-style.scss
+++ b/packages/client/src/sass/LandingPageNew-style.scss
@@ -77,7 +77,7 @@ html, body {
 
     right: 0;
     button {
-      position: absolute;
+      position: fixed;
 
       outline: none;
       border-radius: 5vh;
