--- a/packages/client/src/sass/elements/ThirdElement-style.scss
+++ b/packages/client/src/sass/elements/ThirdElement-style.scss
@@ -7,6 +7,7 @@ main {
   width: 70vw;
   height: 100%;
   article.third  {
+    padding-bottom: 3vh;
     margin: 6vh 0;
     width: 55vw;
     .title {
