--- a/packages/client/src/sass/elements/ThirdElement-style.scss
+++ b/packages/client/src/sass/elements/ThirdElement-style.scss
@@ -1,64 +1,50 @@
 @import "../../variables.scss";
 
-main {
+.teWrapper {
   right: 0;
   position: absolute;
 
   width: 70vw;
-  height: 100%;
-  article.third  {
-    padding-bottom: 3vh;
-    margin: 6vh 0;
-    width: 55vw;
-    .title {
-      .accentLine {
-        height: 4px;
-        width: 2.2vw;
+  .cardsWrapper {
+    padding-top: 2vh;
+    .wideCard {
+      width: 60vw;
 
-        border-radius: 8px;
-        background: #ff1d00;
-      }
-      p {
-        margin-left: 1vw;
+      padding: 20px;
+      padding-top: 0;
+      margin-bottom: 20px;
 
-        font-size: 2.5vw;
-        font-weight: 700;
+      background: $dark-gray;
+      border-radius: 1.4vh;
+
+      h1 {
         color: $main-text;
-      }
-    }
-    .body {
-      margin-left: 3.5vw;
-      margin-top: 2vh;
-      p {
-        color: $second-text;
-      }
-    }
-    .cardWrapper {
-      justify-content: flex-start;
-      align-items: flex-start;
-      width: 100%;
-
-      .card {
-        width:100%;
-        .card__icon {
-            color: #f4f4f4;
-            font-size: 4vw;
-            margin: 1vh;
-        }
-        align-items: flex-start;
-        margin: 0.5em 0;
-        padding: 1em 3vw;
-        border-radius: 1.4vh;
-        text-align: left;
-        background: $dark-gray;
-        .card__title {
+        font-size: 3em;
+        span {
           color: $accent;
-          font-size: 1.6vw;
-          font-weight: 700;
+          font-size: 1.5em;
         }
-        .card__description {
-          font-size: 0.7vw;
-          color: $main-text;
+        .addendum {
+          color: $accent;
+          font-size: 0.3em;
+          margin-bottom: 0.5em;
+        }
+      }
+      p {
+        color: $main-text;
+        font-size: 1.1em;
+
+        position: relative;
+      }
+      ul {
+        margin-top: 1.2vh;
+        li {
+          list-style: none;
+          p {
+            span {
+              color: $accent;
+            }
+          }
         }
       }
     }
