--- a/packages/client/src/sass/elements/SecondElement-style.scss
+++ b/packages/client/src/sass/elements/SecondElement-style.scss
@@ -1,6 +1,6 @@
 @import "../../variables.scss";
 
-main {
+.seWrapper {
   right: 0;
   position: absolute;
 
@@ -14,7 +14,8 @@ main {
       .card {
         min-width: calc(100% / 4 - 4vw);
         height: 40vh;
-        margin-right: 4vw;
+        margin: 6vh 4vw 0 0;
+        // margin-right: 4vw;
 
         position: relative;
         background: $dark-gray;
@@ -94,10 +95,4 @@ main {
       }
     }
   }
-}
-.visible {
-  display: inherit;
-}
-.invisible {
-  display: none;
 }
