--- a/packages/client/src/sass/LandingPageNew-style.scss
+++ b/packages/client/src/sass/LandingPageNew-style.scss
@@ -1,7 +1,31 @@
 @import "../variables.scss";
 
-html, body {
+html,
+body {
   background: $background;
+}
+
+.visible {
+  display: inherit;
+}
+.invisible {
+  display: none;
+}
+.title {
+  .accentLine {
+    height: 4px;
+    width: 2.2vw;
+
+    border-radius: 8px;
+    background: #ff1d00;
+  }
+  p {
+    margin-left: 1vw;
+
+    font-size: 2.5vw;
+    font-weight: 700;
+    color: $main-text;
+  }
 }
 
 .wrapper {
@@ -34,7 +58,6 @@ html, body {
     position: absolute;
 
     width: 30vw;
-    height: 100%;
 
     margin-top: 9.8vh;
     .dotWrapper {
@@ -95,12 +118,12 @@ html, body {
       padding: 0.8vh 2.5vw 0.8vh 2vw;
     }
     .gbBtn {
-      padding: 0.8vh 1.8vw;
+      padding: 0.8vh 0.8vw 0.8vh 1.8vw;
 
       color: $gray;
       border: 2px solid $gray;
 
-      left: 30%;
+      left: 21%;
     }
     .invisible {
       display: none;
