add none default

--- a/packages/client/src/sass/LandingPageNew-style.scss
+++ b/packages/client/src/sass/LandingPageNew-style.scss
@@ -46,6 +46,7 @@ body {
       .default-menu {
         display: flex;
         @media screen and (max-width: 500px) {
+          display:none;
           position: absolute;
           flex-direction: column;
           top: 0;
@@ -69,9 +70,12 @@ body {
               0 12.5px 10px rgba(252, 28, 8, 0.06),
               0 22.3px 17.9px rgba(252, 28, 8, 0.072),
               0 41.8px 33.4px rgba(252, 28, 8, 0.086),
-              
             }
           }
+        }
+
+        &.expand-menu {
+          display:flex;
         }
       }
 
