--- a/packages/client/src/sass/LandingPageNew-style.scss
+++ b/packages/client/src/sass/LandingPageNew-style.scss
@@ -135,6 +135,7 @@ body {
       
       ul li { 
         list-style-type: none;
+        content: "";
         float: left;
         width: 33.33%;
         position: relative;
