--- a/packages/client/src/sass/LandingPageNew-style.scss
+++ b/packages/client/src/sass/LandingPageNew-style.scss
@@ -135,11 +135,16 @@ body {
       
       ul li { 
         list-style-type: none;
-        content: "";
         float: left;
         width: 33.33%;
         position: relative;
         text-align:center;
+
+        @media screen and (max-width: 500px) {
+          a { 
+            display: none;
+          }
+        }
       }
       
       ul li:before { 
