--- a/packages/client/src/sass/LandingPageNew-style.scss
+++ b/packages/client/src/sass/LandingPageNew-style.scss
@@ -127,6 +127,15 @@ body {
       bottom: 0;
       position: absolute;
       width: 100%;
+      div {
+        background: #5C5C5C;
+        color: white;
+        width: 100%;
+        text-align: center;
+        font-size: 1.25rem;
+        padding: 0.5rem 0.25rem;
+        margin: 1rem 0;
+      }
 
       ul {
         counter-reset: step;
