--- a/packages/client/src/sass/LandingPageNew-style.scss
+++ b/packages/client/src/sass/LandingPageNew-style.scss
@@ -119,11 +119,35 @@ body {
     left: 0;
     position: absolute;
 
-    width: 30vw;
+    // width: 30vw;
 
     margin-top: 9.8vh;
+    z-index: 5;
 
+    ul {
+      flex-direction: flex-start;
+      color: white;
+    }
 
+    ul li {
+      list-style: none;
+    }
+
+    // ul li {
+    //   display: flex;
+    // }
+
+    // ul:before {
+    //   content: '';
+    //   position: absolute;
+    //   top: 5px;
+    //   bottom: 5px;
+    //   width: 5px;
+    //   background: #2d353c;
+    //   left: 20%;
+    //   margin-left: -2.5px;
+    // }
+    
     ul li:before { 
       content: counter(step);
       counter-increment: step;
@@ -131,23 +155,39 @@ body {
       height: 30px;
       line-height: 30px;
       border: 1px solid #ddd;
-      display: block;
+      display: inline-block;
       text-align: center;
-      margin: 0 auto 10px auto;
+      margin: 5px 10px;
       border-radius: 50%;
       background-color: white;
+      z-index: 2;
     }
     
+    // ul li:after {
+    //   content : "";
+    //   border: 2px solid red;
+    // }
     ul li:after { 
       content: '';
       position: absolute;
-      width: 100%;
-      height: 1px;
-      background:#ddd;
-      top: 15px;
-      left: -50%;
-      z-index: -1;
+      top: 24px;
+      bottom: 5px;
+      width: 2px;
+      background: red;
+      left: 26px;
+      z-index: 1;
     }
+
+    // ul li:after { 
+    //   content: '';
+    //   position: absolute;
+    //   height: 100%;
+    //   height: 1px;
+    //   background:#ddd;
+    //   top: 15px;
+    //   left: -50%;
+    //   z-index: -1;
+    // }
 
     @media screen and (max-width: 500px){
       bottom: 0;
@@ -201,7 +241,7 @@ body {
         position: absolute;
         width: 100%;
         height: 1px;
-        background:#ddd;
+        background:red;
         top: 15px;
         left: -50%;
         z-index: -1;
@@ -224,28 +264,28 @@ body {
         color: $main-text;
       }
     }
-    .dot {
-      width: 15px;
-      height: 15px;
-      border-radius: 100%;
-      background: $gray;
-      margin: -1px 0;
+    // .dot {
+    //   width: 15px;
+    //   height: 15px;
+    //   border-radius: 100%;
+    //   background: $gray;
+    //   margin: -1px 0;
 
-      z-index: 1;
-    }
-    .line {
-      margin-right: 15vw;
+    //   z-index: 1;
+    // }
+    // .line {
+    //   margin-right: 15vw;
 
-      width: 3px;
-      height: 4vw;
-      border-radius: 8px;
-      background: $gray;
+    //   width: 3px;
+    //   height: 4vw;
+    //   border-radius: 8px;
+    //   background: $gray;
 
-      z-index: 0;
-    }
-    .accent {
-      background: #ff1d00;
-    }
+    //   z-index: 0;
+    // }
+    // // .accent {
+    //   background: #ff1d00;
+    // }
   }
   .navigationButtons {
     width: 70%;
