--- a/packages/client/src/sass/LandingPageNew-style.scss
+++ b/packages/client/src/sass/LandingPageNew-style.scss
@@ -131,6 +131,8 @@ body {
 
     ul li {
       list-style: none;
+      display: flex;
+      align-items: center;
     }
 
     // ul li {
@@ -149,17 +151,17 @@ body {
     // }
     
     ul li:before { 
-      content: counter(step);
+      content: '';
       counter-increment: step;
       width: 16px;
       height: 16px;
       line-height: 16px;
-      border: 1px solid #ddd;
+      border: 1px solid #5C5C5C;
       display: inline-block;
       text-align: center;
       margin: 20px 10px;
       border-radius: 50%;
-      background-color: white;
+      background-color: #5C5C5C;
       z-index: 2;
     }
     
@@ -170,10 +172,14 @@ body {
     ul li:after { 
       content: '';
       position: absolute;
-      top: 38px;
-      bottom: 19px;
+      top: 40px;
+      bottom: 21px;
       width: 2px;
-      background: red;
+      background: #5C5C5C;
+      color: #5C5C5C;
+      border: #5C5C5C;
+      border-inline-color: #5C5C5C;
+      border-inline-end-color: #5C5C5C;
       left: 18px;
       z-index: 1;
     }
@@ -228,12 +234,12 @@ body {
         width: 30px;
         height: 30px;
         line-height: 30px;
-        border: 1px solid #ddd;
+        border: 1px solid #5C5C5C;
         display: block;
         text-align: center;
         margin: 0 auto 10px auto;
         border-radius: 50%;
-        background-color: white;
+        background-color: #5C5C5C;
       }
       
       ul li:after { 
@@ -241,7 +247,7 @@ body {
         position: absolute;
         width: 100%;
         height: 1px;
-        background:red;
+        background:#5C5C5C;
         top: 15px;
         left: -50%;
         z-index: -1;
