--- a/packages/client/src/sass/LandingPageNew-style.scss
+++ b/packages/client/src/sass/LandingPageNew-style.scss
@@ -118,7 +118,7 @@ body {
   .scrollIndicator {
     left: 0;
     position: absolute;
-
+    margin-left: 20px;
     // width: 30vw;
 
     margin-top: 9.8vh;
