--- a/packages/client/src/sass/LandingPageNew-style.scss
+++ b/packages/client/src/sass/LandingPageNew-style.scss
@@ -31,11 +31,11 @@ body {
 }
 
 .wrapper {
-  .navbar {
+  .wrapper--navbar {
     width: 100%;
     padding-bottom: 20px;
     justify-content: space-between;
-    .logo {
+    .wrapper--navbar--logo {
       margin: 20px;
       width: 50px;
     }
@@ -54,7 +54,7 @@ body {
           position: absolute;
           flex-direction: column;
           top: 0;
-          right:0;
+          right: 0;
           z-index: 5;
           background-color: black;
           transform: rotate3d(90);
@@ -67,19 +67,16 @@ body {
             width: 100%;
             font-size: 0;
             &:hover {
-              background-color: rgba(252, 28, 8,0.7);
-              box-shadow:
-              0 2.8px 2.2px rgba(252, 28, 8, 0.034),
-              0 6.7px 5.3px rgba(252, 28, 8, 0.048),
-              0 12.5px 10px rgba(252, 28, 8, 0.06),
-              0 22.3px 17.9px rgba(252, 28, 8, 0.072),
-              0 41.8px 33.4px rgba(252, 28, 8, 0.086),
+              background-color: rgba(252, 28, 8, 0.7);
+              box-shadow: 0 2.8px 2.2px rgba(252, 28, 8, 0.034), 0 6.7px 5.3px rgba(252, 28, 8, 0.048),
+                0 12.5px 10px rgba(252, 28, 8, 0.06), 0 22.3px 17.9px rgba(252, 28, 8, 0.072),
+                0 41.8px 33.4px rgba(252, 28, 8, 0.086);
             }
           }
         }
 
         &.expand-menu {
-          display:flex;
+          display: flex;
           visibility: visible;
           width: calc(100vw * 10 / 9);
           height: calc(100vh * 10 / 9);
@@ -93,11 +90,11 @@ body {
         visibility: hidden;
         @media screen and(max-width: 500px) {
           visibility: visible;
-          display:flex;
+          display: flex;
           z-index: 10;
         }
         * {
-          fill:white
+          fill: white;
         }
       }
       padding: 2rem;
@@ -149,42 +146,42 @@ body {
     //   left: 20%;
     //   margin-left: -2.5px;
     // }
-    
-    ul li:before { 
-      content: '';
+
+    ul li:before {
+      content: "";
       counter-increment: step;
       width: 16px;
       height: 16px;
       line-height: 16px;
-      border: 1px solid #5C5C5C;
+      border: 1px solid #5c5c5c;
       display: inline-block;
       text-align: center;
       margin: 20px 10px;
       border-radius: 50%;
-      background-color: #5C5C5C;
+      background-color: #5c5c5c;
       z-index: 2;
     }
-    
+
     // ul li:after {
     //   content : "";
     //   border: 2px solid red;
     // }
-    ul li:after { 
-      content: '';
+    ul li:after {
+      content: "";
       position: absolute;
       top: 40px;
       bottom: 21px;
       width: 2px;
-      background: #5C5C5C;
-      color: #5C5C5C;
-      border: #5C5C5C;
-      border-inline-color: #5C5C5C;
-      border-inline-end-color: #5C5C5C;
+      background: #5c5c5c;
+      color: #5c5c5c;
+      border: #5c5c5c;
+      border-inline-color: #5c5c5c;
+      border-inline-end-color: #5c5c5c;
       left: 18px;
       z-index: 1;
     }
 
-    // ul li:after { 
+    // ul li:after {
     //   content: '';
     //   position: absolute;
     //   height: 100%;
@@ -195,12 +192,12 @@ body {
     //   z-index: -1;
     // }
 
-    @media screen and (max-width: 500px){
+    @media screen and (max-width: 500px) {
       bottom: 0;
       position: absolute;
       width: 100%;
       div {
-        background: #5C5C5C;
+        background: #5c5c5c;
         color: white;
         width: 100%;
         text-align: center;
@@ -213,51 +210,49 @@ body {
         counter-reset: step;
         width: 100%;
       }
-      
-      ul li { 
+
+      ul li {
         list-style-type: none;
         float: left;
         width: 33.33%;
         position: relative;
-        text-align:center;
+        text-align: center;
 
-       
-          a { 
-            display: none;
-          }
-        
+        a {
+          display: none;
+        }
       }
-      
-      ul li:before { 
+
+      ul li:before {
         content: counter(step);
         counter-increment: step;
         width: 30px;
         height: 30px;
         line-height: 30px;
-        border: 1px solid #5C5C5C;
+        border: 1px solid #5c5c5c;
         display: block;
         text-align: center;
         margin: 0 auto 10px auto;
         border-radius: 50%;
-        background-color: #5C5C5C;
+        background-color: #5c5c5c;
       }
-      
-      ul li:after { 
-        content: '';
+
+      ul li:after {
+        content: "";
         position: absolute;
         width: 100%;
         height: 1px;
-        background:#5C5C5C;
+        background: #5c5c5c;
         top: 15px;
         left: -50%;
         z-index: -1;
       }
-  
+
       ul li:first-child:after {
         content: none;
       }
     }
-    
+
     .dotWrapper {
       margin-right: 15vw;
       position: relative;
