--- a/packages/client/src/sass/LandingPageNew-style.scss
+++ b/packages/client/src/sass/LandingPageNew-style.scss
@@ -112,7 +112,7 @@ body {
       }
     }
   }
-  .scrollIndicator {
+  .wrapper--main--scrollIndicator {
     left: 0;
     position: absolute;
     margin-left: 20px;
