--- a/packages/client/src/sass/elements/SecondElement-style.scss
+++ b/packages/client/src/sass/elements/SecondElement-style.scss
@@ -2,9 +2,9 @@
 
 .seWrapper {
   right: 0;
-  position: absolute;
+  // position: absolute;
 
-  width: 70vw;
+  // width: 70vw;
   @media screen and (max-width: 500px) {
     width: 100vw;
   }
