refine logo size @alvin-ictn

--- a/packages/client/src/sass/LandingPageNew-style.scss
+++ b/packages/client/src/sass/LandingPageNew-style.scss
@@ -120,7 +120,7 @@ body {
       position: relative;
       margin-left: 20px;
       width: 100%;
-
+      max-width: 200px;
       margin-top: 9.8vh;
       z-index: 5;
 
