refine description margin @alvin-ictn

--- a/packages/client/src/sass/elements/SecondElement-style.scss
+++ b/packages/client/src/sass/elements/SecondElement-style.scss
@@ -46,7 +46,7 @@
         .description {
           text-align: center;
           color: $main-text;
-          margin: 2vh 1vw;
+          margin: 1rem 0.5rem;
         }
         .title {
           color: $accent;
