--- a/packages/client/src/sass/elements/SecondElement-style.scss
+++ b/packages/client/src/sass/elements/SecondElement-style.scss
@@ -11,6 +11,7 @@
     .bottom {
       justify-content: flex-start;
       width: 100%;
+      position: relative;
       @media (max-width: 900px) {
         flex-wrap: wrap;
       }
