--- a/packages/client/src/sass/elements/SecondElement-style.scss
+++ b/packages/client/src/sass/elements/SecondElement-style.scss
@@ -25,6 +25,10 @@
           height: 30vh;
         }
 
+        @media (max-width: 600px) {
+          width: calc(100% - 4vw);
+        }
+
         position: relative;
         background: $dark-gray;
 
